--- a/manual/templates/manual/intro.html
+++ b/manual/templates/manual/intro.html
@@ -51,7 +51,7 @@
     </div>
     <br>
     <p>Aktuelle technische Daten zu unseren Produkten sind in den jeweiligen technischen Merkblättern und Sicherheitsdatenblättern hinterlegt.</p>
-    <p>Die technischen Merkblätter, Sicherheitsdatenblätter sowie weitere Downloads zum Anwendungshandbuch, auf die hier verwiesen werden, sind im Login-Bereich unserer Homepage zu finden. Hierfür ist eine Registrierung auf der Dörken Coatings-Homepage notwendig <a href="https://www.doerken.com/de/de/login-industrial-coatings" rel="noopener noreferrer" target="_blank">(Login >> Sign-up)</a>. Die Elektrotauchlackierung (DELTA-eLACK®) sowie das DELTA-PROZINC®-System sind nicht Bestandteil dieses Handbuchs.</p>
+    <p>Die technischen Merkblätter, Sicherheitsdatenblätter sowie weitere Downloads zum Anwendungshandbuch, auf die hier verwiesen werden, sind im Login-Bereich unserer Homepage zu finden. Hierfür ist eine Registrierung auf der Dörken Coatings-Homepage notwendig <a href="https://www.doerken.com/de/de/login-industrial-coatings" rel="noopener noreferrer" target="_blank">(Einloggen >> Anmelden)</a>. Die Elektrotauchlackierung (DELTA-eLACK®) sowie das DELTA-PROZINC®-System sind nicht Bestandteil dieses Handbuchs.</p>
     <p>Bei Fragen zum Inhalt dieses Handbuches oder zu weiteren Produkten der Dörken Coatings freuen wir uns über eine Kontaktaufnahme.</p>
     <address class="contact-info mt-4">
         <strong>KONTAKTDATEN</strong><br>
