einloggen text optimiert

--- a/manual/templates/manual/section_detail_accordion.html
+++ b/manual/templates/manual/section_detail_accordion.html
@@ -125,7 +125,7 @@
                 </form>
             {% endif %}
         {% else %}
-            <p><a href="{% url 'account_login' %}?next={{ request.path }}">Einloggen</a>  um einen Kommentar zu hinterlassen.</p>
+            <p><a href="{% url 'account_login' %}?next={{ request.path }}">Bitte Einloggen</a>  um einen Kommentar zu hinterlassen.</p>
         {% endif %}
     </div>
 </section>
