fix: replaces the english text with german on homepage

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -22,8 +22,8 @@
             <div class="card mb-4" data-bs-toggle="modal" data-bs-target="#guidelinesModal">
                 <div class="card-body d-flex flex-column align-items-center">
                     <div class="icon"><i class="fas fa-tasks"></i></div>
-                    <h5 class="card-title">Guidelines</h5>
-                    <p class="card-text">Chapter 2: Guidelines for application.</p>
+                    <h5 class="card-title">Leitfaden</h5>
+                    <p class="card-text">Hinweis zur Nutzung des Handbuches.</p>
                     <a href="{% url 'guide' %}" class="btn btn-primary btn-learn-more">Mehr erfahren</a>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                 <div class="card-body d-flex flex-column align-items-center">
                     <div class="icon"><i class="fas fa-book-open"></i></div>
                     <h5 class="card-title">Anwendungshandbuch</h5>
-                    <p class="card-text">Chapter 3: Detailed product information.</p>
+                    <p class="card-text">Kapitel zur Produktanwendung.</p>
                     <a href="{% url 'section_list' %}" class="btn btn-primary btn-learn-more">Mehr erfahren</a>
                 </div>
             </div>
