--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -21,7 +21,7 @@
         <div class="col-md-4">
             <div class="card mb-4" data-bs-toggle="modal" data-bs-target="#guidelinesModal">
                 <div class="card-body d-flex flex-column align-items-center">
-                    <div class="icon"><i class="fas fa-tasks"></i></div>
+                    <a href="{% url 'guide' %}"><div class="icon"><i class="fas fa-tasks"></i></div></a>
                     <h5 class="card-title">Leitfaden</h5>
                     <p class="card-text">Hinweis zur Nutzung des Handbuches.</p>
                     <a href="{% url 'guide' %}" class="btn btn-primary btn-learn-more">Mehr erfahren</a>
@@ -31,7 +31,7 @@
         <div class="col-md-4">
             <div class="card mb-4" data-bs-toggle="modal" data-bs-target="#productInfoModal">
                 <div class="card-body d-flex flex-column align-items-center">
-                    <div class="icon"><i class="fas fa-book-open"></i></div>
+                    <a href="{% url 'section_list' %}"><div class="icon"><i class="fas fa-book-open"></i></div></a>
                     <h5 class="card-title">Anwendungshandbuch</h5>
                     <p class="card-text">Kapitel zur Produktanwendung.</p>
                     <a href="{% url 'section_list' %}" class="btn btn-primary btn-learn-more">Mehr erfahren</a>
